@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-14T00:55:48Z",
+  "timestamp" : "2022-05-14T08:11:42Z",
   "count_outdated" : 9,
   "uniques_outdated" : 3,
-  "count" : 329,
-  "uniques" : 13,
+  "count" : 331,
+  "uniques" : 14,
   "views" : [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -74,6 +74,13 @@
       "count_minmax": [ 0, 42 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-14T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
