@@ -1,5 +1,5 @@
 {
-  "count": 320,
+  "count": 322,
   "uniques": 1,
   "views": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-05-12T00:00:00Z",
       "count": 42,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-14T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
