@@ -1,3 +1,10 @@
+2022-05-14T08:11:42Z:
+* notice: last 14d: all unq: 322 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 9 3 / 329 13
+* notice: next accum: outdated-all outdated-unq / all unq: 9 3 / 331 14
+* notice: prev json diff / prev day diff: unq all: +1 +2 -0 -0 / +1 +2 -0 -0
+* notice: changed dates: [2022-05-14]
+
 2022-05-14T00:55:48Z:
 * notice: last 14d: all unq: 320 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 8 2 / 329 13
